# agent

./: .env.example  .gitignore  README.md  pyproject.toml  开发计划.md  接口文档.md  测试计划.md
scripts/: dev.sh  run.sh  setup.sh
src/agent_runtime/: __init__.py  agent.py  artifacts.py  logging.py
src/agent_runtime/config/: __init__.py  settings.py
src/agent_runtime/context/: __init__.py  compression.py  compression_flow.md  engine.py  engine_types.py  tokens.py
src/agent_runtime/mcp/: __init__.py  client.py
src/agent_runtime/memory/: __init__.py  long_term.py  store.py
src/agent_runtime/permissions/: __init__.py  manager.py  policy.py  types.py
src/agent_runtime/providers/: __init__.py  base.py  openai.py  openai_chat.py  openai_common.py  openai_responses.py
src/agent_runtime/runtime/: __init__.py  loop.py
src/agent_runtime/skills/: __init__.py  examples.py  loader.py  manifest.py  registry.py
src/agent_runtime/tools/: __init__.py  memory.py  registry.py  shell.py  skills.py
test_record/: 问题.md
tests/: __init__.py  conftest.py  test_agent.py  test_context.py  test_logging.py  test_permissions.py  test_providers.py  test_runtime.py  test_scaffold.py  test_skills.py  test_tools.py  test_web.py
web/: __init__.py  index.html  main.py  package-lock.json  package.json  server.py  session.py  vite.config.js
web/commands/: __init__.py  help.py  model.py  registry.py  status.py
web/src/: App.jsx  api.js  main.jsx  styles.css  utils.js
web/src/components/: CommandMenu.jsx  Message.jsx  RuntimeStatus.jsx
web/static/: index.html
(+15 files in other folders)
