[project]
name = "agent-runtime"
version = "0.1.0"
description = "Local CLI agent runtime core."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
tokenizers = [
    "tiktoken>=0.7.0",
]

[project.scripts]
agent = "web.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["agent_runtime*", "web*"]

[tool.setuptools.package-data]
"web" = ["static/*", "static/assets/*"]
